<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Text Editor</string>
    <string name="app_name_settings">Simple Text Editor - Settings</string>
    <string name="Open">Open</string>
    <string name="Open_Recent">Open Recent</string>
    <string name="New">New</string>
    <string name="Save">Save</string>
    <string name="Save_As">Save As</string>
    <string name="Go_To">Go To</string>
    <string name="Go_To_Beginning">Beginning</string>
    <string name="Go_To_End">End</string>
    <string name="Location">Location: %s</string>
    <string name="Select">Select</string>
    <string name="File_Name">File Name:</string>
    <string name="Cancel">Cancel</string>
    <string name="Create">Save</string>
    <string name="No_Data">No Data</string>
    <string name="File_not_saved">File not saved:</string>
    <string name="Save_current_file">Save current file?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="OK">OK</string>
    <string name="File_Written">File Written</string>
    <string name="Can_not_write_file">Can not write file</string>
    <string name="File_opened_">File opened %s</string>
    <string name="File_not_found">File not found</string>
    <string name="Can_not_read_file">Can not read file</string>
    <string name="Operation_Canceled">Operation Canceled</string>
    <string name="Recovery_draft_found">Unsaved recovery draft</string>
    <string name="Recovery_draft_message">An unsaved version of “%1$s” from %2$s was found.</string>
    <string name="Restore">Restore</string>
    <string name="Discard_draft">Discard draft</string>
    <string name="External_change_detected">External change detected</string>
    <string name="External_change_message">“%1$s” changed outside TextPad. Reload the external version, overwrite it with your edits, save your edits as another file, or cancel to keep editing.</string>
    <string name="Overwrite">Overwrite</string>
    <string name="Reload">Reload</string>
    <string name="Reload_external_title">Reload external version?</string>
    <string name="Reload_external_message">Your unsaved TextPad edits will be discarded after the external version is loaded successfully.</string>
    <string name="File_reloaded_after_external_change">File reloaded after an external change</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="Continue">Continue</string>
    <string name="about_message">This is Simple Text Editor for Android. To get more information visit https://simpleditor.org</string>
    <string name="Choose_Language">Choose Language</string>
    <string name="Language">Language</string>
    <string name="Click_to_change_language">сlick to change language of interface</string>
    <string name="searchLabel">Search</string> 
    <string name="searchHint">Text</string>
    <string name="s_not_found">"%s" not found</string>
    <string name="opened_last_edited_file">opened last edited file %s</string>
    <string name="Search">Search</string>
    <string name="Choose_a_color">Choose a color</string>
    <string name="Open_File">Open File</string>
    <string name="Save_File">Save File</string>
    <string name="Click_to_change_encoding">Click to change encoding</string>
    <string name="Encoding">Encoding</string>
    <string name="Line_endings">Line endings</string>
    <string name="Line_Delimiters">Line Delimiters</string>
    <string name="Font_Size">Font Size</string>
    <string name="Choose_a_font_size">Choose a font size</string>
    <string name="Font_Color">Font Color</string>
    <string name="Choose_a_font_color">Choose a font color</string>
    <string name="Background_Color">Background Color</string>
    <string name="Choose_a_background_color">Choose a background color</string>
    <string name="Version">Version</string>
    <string name="Just_a_little_FYI">Just a little FYI</string>
    <string name="About_Editor">About Editor</string>
    <string name="Warranty_Information">Warranty Information</string>
    <string name="Font">Font</string>
    <string name="Choose_a_font_type">Choose a font type</string>
    <string name="Open_Last">Open Last</string>
    <string name="To_open_last_edited_file">To open last edited file</string>
    <string name="Main_Settings">Main Settings</string>
    <string name="Appearance">Appearance</string>
    <string name="You_have_made_some_changes">You have made some changes.</string>
    <string name="Are_you_sure_to_quit">Are you sure you want to quit the application?</string>
    <string name="File_already_exists">File already exists</string>
    <string name="Existing_file_will_be_overwritten">Existing file will be overwritten, are you sure to proceed?</string>
    <string name="Exit">Exit</string>
    <string name="Type_Something_Here">Type Something Here</string>
    <string name="Legacy_file_picker">Legacy file picker</string>
    <string name="Use_legacy_file_picker">Use legacy file picker</string>
    <string name="action_edit">Edit</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>

    <string name="FileSystemAccess">File System Access</string>
    <string name="AlternativeFileAccessTitle">Alternative File Paths</string>
    <string name="AlternativeFileAccessDescription">Allow assigning alternative addresses for files if no file system permissions granted.</string>
    <string name="ResetAlternativeFilePaths">Reset alternative file paths</string>
    <string name="ResetAlternativeFilePathsSummary">Click here to reset stored alternative file paths</string>
    <string name="SelectAlternativeLocationForFile">The file can not be opened using file system name, do you want to select this file using media manager?</string>
    <string name="ResetAlternativeFileLocations">Are you sure that you want to delete stored alternative file paths?</string>

    <string name="preferenceDefaultColor">Default Color</string>
    <string name="preferenceChooseTextSelectionColor">Choose a text highlight color</string>
    <string name="preferenceTextSelectionColor">Text Highlight Color</string>
    <string name="preferenceChooseSearchSelectionColor">Choose a search result highlight color</string>
    <string name="preferenceSearchSelectionColor">Search Result Highlight Color</string>

    <string name="preferenceShowLastEditedFilesTitle">Show Last Edited Files</string>
    <string name="preferenceShowLastEditedFilesDescription">Show last edited files in options menu</string>

    <string name="preferenceAutoSaveCurrentFileTitle">Autosaving</string>
    <string name="preferenceAutoSaveCurrentFileDescription">Automatically save currently editing file when window is closed</string>
    <string name="preferenceAutowrappingTitle">Autowrapping</string>
    <string name="preferenceAutowrappingDescription">wrap the line if text too long</string>
    <string name="Open_Other">Open other…</string>


    <string name="Menu_Share">Share…</string>
    <string name="Menu_Print">Print</string>

    <string name="preferenceUseSystemColors">Color Theme</string>
    <string name="preferenceUseSystemColorsDescription">Select system theme</string>
    <string name="preference_color_theme_auto">Auto</string>
    <string name="preference_color_theme_light">Light</string>
    <string name="preference_color_theme_dark">Dark</string>
    <string name="preference_color_theme_custom">Custom</string>
    <string name="preferenceUseWakeLockTitle">Use WakeLock</string>
    <string name="preferenceUseWakeLockDescription">Prevent device going to sleep mode</string>
    <string name="preferenceUseSimpleScrolling">Fix Erratic Scrolling</string>
    <string name="preferenceUseSimpleScrollingDescription">Enable this if text unexpectedly jumps to the end while scrolling</string>


    <string name="readOnlyDialogMessage">This file is open in read only mode. You can save it with a different name, or you can open it again using \'Open\' command from the application menu.</string>
    <string name="readOnlyDialogClickHere">Click here to read more.</string>
    <string name="readOnlyDialogTitle">Warning: file is read only!</string>
    <string name="readOnlyDialogButtonOpenAgain">Open again</string>
    <string name="readOnlyDialogButtonContinue">Continue read only</string>


</resources>
