...
            android:orientation="vertical" android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" android:paddingLeft="10dp"
            android:paddingRight="10dp" android:paddingBottom="5dp">
            <TextView android:id="@+id/textViewFilename" android:text="@string/File_Name"
                android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <EditText android:text="" android:id="@+id/fdEditTextFile"
                android:inputType="text"
                android:autofillHints="@string/File_Name"
                android:hint="@string/File_Name"
                android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>

            <LinearLayout android:orientation="horizontal"
...
